tests/negative/struct_array_param.ax
module struct_array_param;

struct Buffer {
    data: [4]u8;
}

fn bad(buffer: Buffer) -> i32 {
    return 0;
}

fn main() -> i32 {
    return 0;
}
